Fixed inverse tau error.

--- a/astro400B_lecture_5.tex
+++ b/astro400B_lecture_5.tex
@@ -280,7 +280,7 @@ By averaging the force on $i$ and $j$, we find
 \noindent
 and averaging this over a short time interval $0<t<\tau$ gives
 \begin{equation}
-\frac{1}{2\tau}\left[ \frac{dI}{dt(\tau)} - \frac{dI}{dt}(0)\right] = 2 \ave{KE} + \ave{PE} + \sum_i \ave{\vF_{\mathrm{ext}}^{i} \cdot \vx_i}
+\frac{1}{2\tau}\left[ \frac{dI}{dt}(\tau) - \frac{dI}{dt}(0)\right] = 2 \ave{KE} + \ave{PE} + \sum_i \ave{\vF_{\mathrm{ext}}^{i} \cdot \vx_i}
 \end{equation}
 \noindent
 If all objects in the system are bound, then $|\vx_i \cdot \vv_i|$ and $dI/dt$ will be finite.  As $\tau\to\infty$, the LHS goes to zero.  Then we have
