--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -123,5 +123,11 @@
 %vector surface
 \newcommand{\vS}{\mathbf{S}}
 
+%vector angular momentum
+\newcommand{\vL}{\mathbf{L}}
+
+%script I -- integral of motion
+\newcommand{\cI}{\mathcal{I}}
+
 %effective potential
 \newcommand{\Phieff}{\Phi_\mathrm{eff}}
