Updated lecture 6, mostly done with lecture 7.

--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -131,3 +131,9 @@
 
 %effective potential
 \newcommand{\Phieff}{\Phi_\mathrm{eff}}
+
+%vector quantity
+\newcommand{\vu}{\mathbf{u}}
+
+%vector rotation
+\newcommand{\vOmega}{\vec{\Omega}}
